@@ -5,6 +5,10 @@ changes in sbcl-0.8.19 relative to sbcl-0.8.18:
   * enhancement: saving cores with foreign code loaded is now
     supported on ppc/Darwin in addition to the previously supported
     platforms.
+  * enhancement: the statistical profiler now walks deeper into the 
+    call stack for more meaningful call-graphs and accrued time
+    reports (x86/x86-64 only). It also now reports time spent in
+    foreign functions.
   * bug fix: invalid :DEFAULT-INITARGS are detected in compiled calls
     to MAKE-INSTANCE.
   * bug fix: defaulted initargs are passed to INITIALIZE-INSTANCE and
